--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "4.5.0",
+    "class-validator": "^0.13.2",
     "prisma": "^4.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "transformer": "^1.2.8"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
