--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all"
+  "semi": false,
+  "trailingComma": "all",
+  "singleQuote": false,
+  "printWidth": 180,
+  "tabWidth": 2,
+  "arrowParens": "avoid"
 }
